--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
 idna==3.4
 oauthlib==3.2.2
+Pillow==10.0.0
 pycparser==2.21
 PyJWT==2.8.0
 python3-openid==3.2.0
