--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ Django==4.2.3
 django-allauth==0.54.0
 django-cors-headers==4.2.0
 django-dotenv==1.4.2
+django-filter==23.2
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
 idna==3.4
